# APP-WRO-PROMETHEUS-TEAM

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/wro_prometheus/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/wro_prometheus/: ColorAnalyzer.kt  CommandManager.kt  MainActivity.kt  SerialMonitorActivity.kt  UsbPermissionReceiver.kt
app/src/main/res/layout/: activity_main.xml  activity_serial_monitor.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/wro_prometheus/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
